# trading

./: .gitignore  config.yaml  pyproject.toml  requirements.txt  run.sh
.claude/: settings.local.json
data/candles/: BTC-USD_30d_ONE_MINUTE.parquet  BTC-USD_7d_ONE_MINUTE.parquet  ETH-USD_30d_ONE_MINUTE.parquet  ETH-USD_7d_ONE_MINUTE.parquet  SOL-USD_30d_ONE_MINUTE.parquet  SOL-USD_7d_ONE_MINUTE.parquet
models/: fv_lgbm_v1.txt  fv_logistic_v1.pkl
scripts/: analyze.py  backtest.py  combine_parquet.py  explore_alpha.py  lead_lag.py  lead_lag_output.txt  ml_refine.py  monitor.py  performance.py  train_logistic.py  train_model.py
src/common/: example_subscriber.py  models.py  msg_bus.py
src/data/kalshi/trade/: 2026-03-09.parquet
src/data_service/: feed.py  main.py  orderbook.py  rest_poller.py
src/execution_service/: executor.py  main.py  order_manager.py
src/gateway/: base.py
src/gateway/coinbase/: __init__.py  data.py  execution.py  orderbook.py
src/gateway/kalshi/: __init__.py  auth.py  client.py  data.py  execution.py  orderbook.py
src/recorder_service/: kalshi_feed.py  main.py  storage.py
src/risk/: __init__.py  order_manager.py  position_manager.py  risk_manager.py
src/services/: live_strategy.py  trade_logger.py
src/strategy/: backtest_engine.py  fair_value.py  features.py  ml_fair_value.py
src/strategy/models/: __init__.py  base.py  gbm.py  logistic.py
tests/: conftest.py  test_execution.py  test_fair_value.py  test_live_strategy.py  test_order_manager.py  test_orderbook.py  test_position_manager.py  test_recorder.py  test_risk_manager.py
(+1 files in other folders)
